@@ -62,7 +62,15 @@
                                                 urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact">
         <ph:RequestPath>/SAML2/Redirect/SSO</ph:RequestPath>
     </ph:ProfileHandler>
-    
+
+    <ph:ProfileHandler xsi:type="ph:SAML2SSO"
+                    inboundBinding="urn:mace:shibboleth:2.0:profiles:AuthnRequest"
+                    outboundBindingEnumeration="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST-SimpleSign
+                                                urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST 
+                                                urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact">
+        <ph:RequestPath>/SAML2/Unsolicited/SSO</ph:RequestPath>
+    </ph:ProfileHandler>
+
     <ph:ProfileHandler xsi:type="ph:SAML2AttributeQuery"
                     inboundBinding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP"
                     outboundBindingEnumeration="urn:oasis:names:tc:SAML:2.0:bindings:SOAP">
