@@ -31,6 +31,7 @@ import org.opensaml.common.SAMLObjectBuilder;
 import org.opensaml.common.binding.decoding.SAMLMessageDecoder;
 import org.opensaml.common.xml.SAMLConstants;
 import org.opensaml.saml2.binding.AuthnResponseEndpointSelector;
+import org.opensaml.saml2.core.Assertion;
 import org.opensaml.saml2.core.AttributeStatement;
 import org.opensaml.saml2.core.AuthnContext;
 import org.opensaml.saml2.core.AuthnContextClassRef;
@@ -44,6 +45,8 @@ import org.opensaml.saml2.core.Response;
 import org.opensaml.saml2.core.Statement;
 import org.opensaml.saml2.core.StatusCode;
 import org.opensaml.saml2.core.Subject;
+import org.opensaml.saml2.core.SubjectConfirmation;
+import org.opensaml.saml2.core.SubjectConfirmationData;
 import org.opensaml.saml2.core.SubjectLocality;
 import org.opensaml.saml2.metadata.AffiliateMember;
 import org.opensaml.saml2.metadata.AffiliationDescriptor;
@@ -198,6 +201,7 @@ public class SSOProfileHandler extends AbstractSAML2ProfileHandler {
             log.debug("Creating login context and transferring control to authentication engine");
             Saml2LoginContext loginContext = new Saml2LoginContext(relyingPartyId, requestContext.getRelayState(),
                     requestContext.getInboundSAMLMessage());
+            loginContext.setUnsolicited(requestContext.isUnsolicited());
             loginContext.setAuthenticationEngineURL(authenticationManagerPath);
             loginContext.setProfileHandlerURL(HttpHelper.getRequestUriWithoutContext(httpRequest));
             loginContext.setDefaultAuthenticationMethod(rpConfig.getDefaultAuthenticationMethod());
@@ -276,6 +280,11 @@ public class SSOProfileHandler extends AbstractSAML2ProfileHandler {
 
             samlResponse = buildResponse(requestContext, "urn:oasis:names:tc:SAML:2.0:cm:bearer", statements);
         } catch (ProfileException e) {
+            if (requestContext.isUnsolicited()) {
+                // Just delegate to the IdP's global error handler
+                log.warn("Unsolicited response generation failed: {}", e.getMessage());
+                throw e;
+            }
             samlResponse = buildErrorResponse(requestContext);
         }
 
@@ -285,7 +294,7 @@ public class SSOProfileHandler extends AbstractSAML2ProfileHandler {
         encodeResponse(requestContext);
         writeAuditLogEntry(requestContext);
     }
-
+    
     /**
      * Decodes an incoming request and stores the information in a created request context.
      * 
@@ -406,6 +415,7 @@ public class SSOProfileHandler extends AbstractSAML2ProfileHandler {
         requestContext.setMessageDecoder(getInboundMessageDecoder(requestContext));
 
         requestContext.setLoginContext(loginContext);
+        requestContext.setUnsolicited(loginContext.isUnsolicited());
 
         requestContext.setInboundMessageTransport(in);
         requestContext.setInboundSAMLProtocol(SAMLConstants.SAML20P_NS);
@@ -418,7 +428,7 @@ public class SSOProfileHandler extends AbstractSAML2ProfileHandler {
         String relyingPartyId = loginContext.getRelyingPartyId();
         requestContext.setPeerEntityId(relyingPartyId);
         requestContext.setInboundMessageIssuer(relyingPartyId);
-
+        
         populateRequestContext(requestContext);
 
         return requestContext;
@@ -672,12 +682,52 @@ public class SSOProfileHandler extends AbstractSAML2ProfileHandler {
         }
     }
 
+    /** {@inheritDoc} */
+    protected void postProcessAssertion(BaseSAML2ProfileRequestContext<?, ?, ?> requestContext, Assertion assertion)
+            throws ProfileException {
+        SSORequestContext ctx = (SSORequestContext) requestContext;
+        if (ctx.isUnsolicited()) {
+            Subject subject = assertion.getSubject();
+            if (subject != null) {
+                for (SubjectConfirmation sc : subject.getSubjectConfirmations()) {
+                    if (sc != null) {
+                        SubjectConfirmationData scd = sc.getSubjectConfirmationData();
+                        if (scd != null) {
+                            scd.setInResponseTo(null);
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    /** {@inheritDoc} */
+    protected void postProcessResponse(BaseSAML2ProfileRequestContext<?, ?, ?> requestContext, Response samlResponse)
+            throws ProfileException {
+        SSORequestContext ctx = (SSORequestContext) requestContext;
+        if (ctx.isUnsolicited()) {
+            samlResponse.setInResponseTo(null);
+        }
+    }    
+
     /** Represents the internal state of a SAML 2.0 SSO Request while it's being processed by the IdP. */
     protected class SSORequestContext extends BaseSAML2ProfileRequestContext<AuthnRequest, Response, SSOConfiguration> {
+
+        /** Unsolicited SSO indicator. */
+        private boolean unsolicited;
 
         /** Current login context. */
         private Saml2LoginContext loginContext;
 
+        /**
+         * Returns the unsolicited SSO indicator.
+         * 
+         * @return the unsolicited SSO indicator
+         */
+        public boolean isUnsolicited() {
+            return unsolicited;
+        }
+        
         /**
          * Gets the current login context.
          * 
@@ -686,6 +736,15 @@ public class SSOProfileHandler extends AbstractSAML2ProfileHandler {
         public Saml2LoginContext getLoginContext() {
             return loginContext;
         }
+        
+        /**
+         * Sets the unsolicited SSO indicator.
+         * 
+         * @param unsolicited unsolicited SSO indicator to set
+         */
+        public void setUnsolicited(boolean unsolicited) {
+            this.unsolicited = unsolicited;
+        }        
 
         /**
          * Sets the current login context.
@@ -695,5 +754,6 @@ public class SSOProfileHandler extends AbstractSAML2ProfileHandler {
         public void setLoginContext(Saml2LoginContext context) {
             loginContext = context;
         }
+
     }
 }
